# powerline-rust

./: .gitignore  Cargo.toml
src/: powerline.rs  theme.rs
src/modules/: awsvault.rs  cwd.rs  distrobox.rs  k8scontext.rs  mod.rs
src/modules/git/: process.rs
