[package]
name = "powerline"
version = "0.2.0"
authors = ["cirho <me@cirho.com>"]
edition = "2018"

[dependencies]
users = "0.9"
libc = "0.2"
hostname = "0.1.5"
git2 = { version = "0.10", optional = true, default-features = false}
dirs = ">0"
subprocess = "0.2.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"

[features]
default = ["bash-shell", "libgit"]
bash-shell = []
bare-shell = []
zsh-shell = []
libgit = ["git2"]

[profile.release]
opt-level = 3
lto = true
debug = false
